--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -138,13 +138,11 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -180,6 +178,7 @@ allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
+allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
@@ -338,6 +337,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:73::a568;
@@ -409,6 +409,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -731,7 +732,6 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
@@ -762,6 +762,7 @@ allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
+allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:167;
@@ -778,6 +779,7 @@ allow 2a12:a800:2:1:45:141:215:63;
 allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
+allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:175;
