--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -111,7 +111,7 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.170.200.76;
+set_real_ip_from 1.170.237.90;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -651,6 +651,7 @@ set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.55.98;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -952,6 +953,7 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
+set_real_ip_from 217.154.21.121;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -1247,8 +1249,10 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1621,6 +1625,7 @@ set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a11:6100:0:156b::;
 set_real_ip_from 2a11:6100:0:1e6a::1;
@@ -1651,7 +1656,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
-set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
@@ -1668,7 +1672,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
 set_real_ip_from 2a12:a800:2:1:45:141:215:88;
 set_real_ip_from 2a12:a800:2:1:45:141:215:90;
-set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
 set_real_ip_from 2a12:a800:2:1:45:80:158:175;
@@ -1688,6 +1691,7 @@ set_real_ip_from 2c0f:6c0:0:3::479d;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.177.222;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1706,7 +1710,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1735,7 +1738,6 @@ set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.139.50.202;
 set_real_ip_from 45.139.50.204;
-set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.133;
@@ -1753,7 +1755,6 @@ set_real_ip_from 45.141.215.63;
 set_real_ip_from 45.141.215.80;
 set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
-set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.192.243.213;
@@ -1925,12 +1926,12 @@ set_real_ip_from 8.209.106.19;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
+set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
-set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
@@ -1946,7 +1947,6 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
